# sec_scripts

./: .bashrc  BASHPROFILE  BASHRC  README.md  analyzer.rb  crypto.rb  ifconfig.rb  loopattack.sh  loopme.sh  mastermind.py  pingsweep.sh  request.py  test  test.rb
FaX/: tcpserver.py
python/: .tags  .tags1  README.md  crack.py  dumpmodules.py  getmodules  pyproject.toml  pystart  request.py
python/ML/c1/: c1_w1_l2.ipynb  c1_w1_l3.ipynb  c1_w1_l4.ipynb  c1_w2_l1.ipynb  c1_w2_l2.ipynb  c1_w2_l3.ipynb  c1_w2_l5.ipynb  c1_w2_lr_assignment.ipynb  c1_w3_Logistic_Regression.ipynb  c1_w3_l1.ipynb  c1_w3_l2.ipynb  c1_w3_l3.ipynb  c1_w3_l4.ipynb  c1_w3_l5.ipynb  c1_w3_l6.ipynb  c1_w3_l7.ipynb  c1_w3_l8.ipynb  c1_w3_l9.ipynb  plt_one_addpt_onclick.py
python/ML/c2/: c2_w1_assignment.ipynb  c2_w1_l1.ipynb  c2_w1_l2.ipynb  c2_w1_l3.ipynb  c2_w2_assignment.ipynb  c2_w2_backdrop.ipynb  c2_w2_derivatives.ipynb  c2_w2_multiclass.ipynb  c2_w2_relu_activation.ipynb  c2_w2_softmax.ipynb  c2_w3_assignment.ipynb  c2_w3_l1.ipynb  c2_w3_l2.ipynb  c2_w4_assignment.ipynb  c2_w4_l1.ipynb  c2_w4_l2.ipynb  utils4.py  utils5.py
python/Module-1/: exceptions.py  function.py  loops.py  modules.py  pack.py
python/Module-2/: directory.py  files.py  ftp_enum.py  portscanner.py  processes.py  queue.py  subprocess.py  threads.py
python/Module-3/: arprequest.py  client.py  multiechoserver.py  multiplexselectecho.py  multiprocessechoserver.py  server.py  simplehttpserver.py  simplesniffer.py  tcpserver.py
python/mock/: dumpmodules.py  request.py  xmascan.py
python/pythonDataScience/: strings.ipynb
(+457 files in other folders)
