[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ST4RGUARD", email = "thema11ock@gmail.com" }
]
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "jupyter>=1.1.1",
    "pyzmq>=27.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
